# pympg

./: .all-contributorsrc  .gitignore  LICENSE  README.md  build.sh  pyproject.toml
.github/workflows/: python-package.yml
pympg/: __init__.py  cli.py  start.py
