[tool.poetry]
name = "pympg"
version = "1.0.0"
description = "Command-line multipurpose config generator."
authors = [
    "Theo Paris <theoparisdesigns@gmail.com>",
    "OnyxCode <me@onyxcode.net>"
]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.6,<3.10"
questionary = "^1.8.0"

[tool.poetry.dev-dependencies]
poethepoet = "^0.9.0"
black = "^20.8b1"

[tool.poetry.scripts]
pympg = "pympg.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
format = "black pympg"
